classDiagram
    Media <|-- Image
    Media <|-- Video

    class Media {
        +PathBuf file_path
        +Resolution resolution
        +u64 file_size
        +str file_type

        +resize_dimensions()
        +convert_file_type()
        +create_preview()
    }

    class Image {
    }

    class Video {
        +f64 duration
        +str codec

        +convert_codec()
    }

    class Logo {
        +PathBuf file_path
        +Resolution resolution
        +u64 scale
        +Corner corner
        +i64 x_offset
        +i64 y_offset

        +resize_logo()
    }
    